--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>nl.eernie.bitbucket</groupId>
+    <groupId>nl.topicus.bitbucket</groupId>
     <artifactId>bitbucket-webhooks</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <organization>
-        <name>Eernie.nl</name>
-        <url>http://www.eernie.nl/</url>
+        <name>Topicus B.V.</name>
+        <url>http://www.topicus.nl/</url>
     </organization>
 
     <name>bitbucket-webhooks</name>
@@ -159,7 +159,7 @@
 
                         <!-- Add package to export here -->
                         <Export-Package>
-                            nl.eernie.bitbucket.api,
+                            nl.topicus.bitbucket.api,
                         </Export-Package>
 
                         <!-- Add package import here -->
