--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <plugin.version.release>2.4</plugin.version.release>
         <bitbucket.version>4.6.1</bitbucket.version>
         <bitbucket.data.version>4.6.1</bitbucket.data.version>
         <amps.version>6.2.11</amps.version>
