--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+            </plugin>
+            <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>bitbucket-maven-plugin</artifactId>
                 <version>${amps.version}</version>
@@ -200,7 +205,6 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <plugin.version.release>2.4</plugin.version.release>
         <bitbucket.version>4.6.1</bitbucket.version>
         <bitbucket.data.version>4.6.1</bitbucket.data.version>
         <amps.version>6.2.11</amps.version>
