--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>nl.topicus.bitbucket</groupId>
-    <artifactId>bitbucket-webhooks</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <groupId>microsoft.office365.bitbucket</groupId>
+    <artifactId>office-365-connector</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <organization>
-        <name>Topicus B.V.</name>
-        <url>http://www.topicus.nl/</url>
+        <name>Microsoft</name>
+        <url>http://www.microsoft.com/</url>
     </organization>
 
-    <name>bitbucket-webhooks</name>
-    <description>This is the Webhooks plugin, It sends out json messages when a PR is created, updated or when a push occurs.</description>
+    <name>Office 365 Connector</name>
+    <description>The Office 365 Connector sends notifications about Pull Request activities in your repositories to the Bitbucket OnPrem connector configured in you Office 365 account.</description>
     <packaging>atlassian-plugin</packaging>
 
     <dependencyManagement>
@@ -113,13 +113,6 @@
             <scope>provided</scope>
         </dependency>
 
-
-        <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-standalone</artifactId>
-            <version>2.5.1</version>
-            <scope>test</scope>
-        </dependency>
         <!-- WIRED TEST RUNNER DEPENDENCIES -->
         <dependency>
             <groupId>com.atlassian.plugins</groupId>
@@ -136,24 +129,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.2.2-atlassian-1</version>
+            <version>2.6.2</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.2</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
             <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>bitbucket-maven-plugin</artifactId>
@@ -231,8 +212,8 @@
 
     <developers>
         <developer>
-            <name>Erwin Oldenkamp</name>
-            <email>erwin.oldenkamp@topicus.nl</email>
+            <name>Srivardhan Hebbar</name>
+            <email>srhebbar@microsoft.com</email>
         </developer>
     </developers>
 
